@@ -1,6 +1,7 @@
 import unittest
 import sys
 import java.lang.Package
+
 from test import test_support
 from zipimport import zipimporter
 
@@ -42,8 +43,15 @@ class SyspathZipimportTest(unittest.TestCase):
         obj = MyJavaClass()
         self.assertTrue(isinstance(obj, zipimporter))
 
+class ZipImporterDictTest(unittest.TestCase):
+    def test_subclass_assign_attribute(self):
+        class A(zipimporter): pass
+        path = os.path.abspath('tests/modjy/lib_python_folder/test_modules.zip')
+        A(path).somevar = 1
+
 def test_main():
     test_support.run_unittest(SyspathZipimportTest)
+    test_support.run_unittest(ZipImporterDictTest)
 
 if __name__ == "__main__":
     test_main()
